# aristoph

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
account/: admin.py  forms.py  index.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_auto_20181219_2253.py  0003_auto_20181223_1925.py  0004_auto_20181224_0855.py  0005_auto_20190206_1239.py  0006_auto_20190209_0915.py  0007_user_notes.py  0008_auto_20190212_2003.py  0009_auto_20190405_2221.py  0010_auto_20190406_0912.py  0011_userconsent.py  0012_user_parent.py  0013_remove_user_birth_date.py  0014_auto_20191023_1354.py  0015_remove_user_short_full_name.py  0016_auto_20191024_1919.py  0017_auto_20191027_1256.py  0018_auto_20191028_0815.py  0019_user_verified.py  0020_delete_emailcode.py
activities/: admin.py  apps.py  index.py  models.py  urls.py  views.py
activities/migrations/: 0001_initial.py  0002_activity_is_active.py  0003_auto_20181221_0858.py  0004_auto_20181221_0911.py  0005_subject_default_teacher.py  0006_auto_20190104_2108.py  0007_activity_groups.py  0008_auto_20190112_0846.py  0009_meeting_activity.py  0010_remove_meeting_reservations_count.py  0011_auto_20190206_1239.py  0012_participation_is_justified.py  0013_auto_20190206_1356.py  0014_presencetype.py  0015_participation_presence_type.py  0016_auto_20190310_1026.py  0017_participation_updated_at.py  (+38 more)
aristoph/: local_settings.example.py  settings.py  urls.py  wsgi.py
home/: admin.py  models.py  urls.py  views.py
scripts/: users_curvature.py
stats/: urls.py  views.py
users/: urls.py  views.py
(+44 files in other folders)
